docs/versioned_docs/version-0.12.7/api/v2/mgmt/create-connection.api.mdx
---
id: create-connection
title: "Create connection"
description: "Create connection"
sidebar_label: "Create connection"
hide_title: true
hide_table_of_contents: true
api: {"operationId":"createConnection","tags":["Connections"],"parameters":[{"name":"customer_id","in":"path","required":true,"schema":{"type":"string","example":"0258cbc6-6020-430a-848e-aafacbadf4ae"}}],"security":[{"ApiKeyAuth":[]}],"requestBody":{"required":true,"content":{"application/json":{"schema":{"additionalProperties":true,"type":"object","properties":{"provider_name":{"type":"string","enum":["apollo"]},"category":{"type":"string","enum":["engagement"]},"api_key":{"type":"string","description":"API key for the connected customer.","example":123456}},"required":["provider_name","category","api_key"]}}}},"responses":{"200":{"description":"Connection created","content":{"application/json":{"schema":{"type":"object","properties":{"id":{"type":"string","example":"e888cedf-e9d0-42c5-9485-2d72984faef2"},"status":{"type":"string","enum":["available","added","authorized","callable"],"example":"available"},"application_id":{"type":"string","example":"d8ceb3ff-8b7f-4fa7-b8de-849292f6ca69"},"customer_id":{"type":"string","example":"my-customer-1"},"provider_id":{"type":"string","example":"677fcfca-cf89-4387-a189-71c885be67bc"},"provider_name":{"type":"string","enum":["hubspot","salesforce","pipedrive","zendesk_sell","ms_dynamics_365_sales","zoho_crm","capsule","outreach","gong","apollo"],"title":"provider_name"},"category":{"type":"string","enum":["crm","engagement"],"title":"category"},"instance_url":{"type":"string","description":"Instance URL for the connected customer.","example":"https://app.hubspot.com/contacts/123456"},"schema_mappings_config":{"type":"object","properties":{"common_objects":{"type":"array","items":{"type":"object","properties":{"object":{"type":"string"},"field_mappings":{"type":"array","items":{"type":"object","properties":{"schema_field":{"type":"string"},"mapped_field":{"type":"string"}},"required":["schema_field"],"title":"field_mapping"}}},"required":["object","field_mappings"]}},"standard_objects":{"type":"array","items":{"type":"object","properties":{"object":{"type":"string"},"field_mappings":{"type":"array","items":{"type":"object","properties":{"schema_field":{"type":"string"},"mapped_field":{"type":"string"}},"required":["schema_field"],"title":"field_mapping"}}},"required":["object","field_mappings"]}}}}},"required":["id","status","application_id","customer_id","provider_id","provider_name","category","instance_url"],"title":"connection"}}}}},"description":"Create connection","method":"post","path":"/customers/{customer_id}/connections","servers":[{"url":"https://api.supaglue.io/mgmt/v2","description":"Supaglue API"}],"securitySchemes":{"ApiKeyAuth":{"type":"apiKey","name":"x-api-key","in":"header","description":"API key to allow developers to access the API"}},"jsonRequestBodyExample":{"provider_name":"apollo","category":"engagement","api_key":123456},"info":{"version":"0.12.7","title":"Supaglue Management API","contact":{"name":"Supaglue","email":"docs@supaglue.com","url":"https://supaglue.com"},"description":"#### Introduction\n\nWelcome to the Supaglue Management API documentation. You can use this API to manage customer integrations and connections.\n\n[![Run in Postman](https://run.pstmn.io/button.svg)](https://god.gw.postman.com/run-collection/18172762-35306f94-8368-4412-b7f3-72715131f727?action=collection%2Ffork&source=rip_markdown&collection-url=entityId%3D18172762-35306f94-8368-4412-b7f3-72715131f727%26entityType%3Dcollection%26workspaceId%3D4d2a33f3-a9f9-41f4-ac2e-5ad4db4a5edb)\n\n#### Base API URL\n\n```\nhttps://api.supaglue.io/mgmt/v2\n```\n"},"postman":{"name":"Create connection","description":{"type":"text/plain"},"url":{"path":["customers",":customer_id","connections"],"host":["{{baseUrl}}"],"query":[],"variable":[{"disabled":false,"description":{"content":"(Required) ","type":"text/plain"},"type":"any","value":"","key":"customer_id"}]},"header":[{"key":"Content-Type","value":"application/json"},{"key":"Accept","value":"application/json"}],"method":"POST","body":{"mode":"raw","raw":"\"\"","options":{"raw":{"language":"json"}}},"auth":{"type":"apikey","apikey":[{"type":"any","value":"x-api-key","key":"key"},{"type":"any","value":"<API Key>","key":"value"},{"type":"any","value":"header","key":"in"}]}}}
sidebar_class_name: "post api-method"
info_path: api/v2/mgmt/supaglue-management-api
custom_edit_url: null
---

import ApiTabs from "@theme/ApiTabs";
import DiscriminatorTabs from "@theme/DiscriminatorTabs";
import MethodEndpoint from "@theme/ApiDemoPanel/MethodEndpoint";
import SecuritySchemes from "@theme/ApiDemoPanel/SecuritySchemes";
import MimeTabs from "@theme/MimeTabs";
import ParamsItem from "@theme/ParamsItem";
import ResponseSamples from "@theme/ResponseSamples";
import SchemaItem from "@theme/SchemaItem";
import SchemaTabs from "@theme/SchemaTabs";
import TabItem from "@theme/TabItem";

<h1 className={"openapi__heading"}>Create connection</h1>

<MethodEndpoint method={"post"} path={"/customers/{customer_id}/connections"}></MethodEndpoint>

<SecuritySchemes infoPath={"api/v2/mgmt/supaglue-management-api"}></SecuritySchemes>



Create connection

## Request

<details style={{"marginBottom":"1rem"}} className={"openapi-markdown__details"} data-collapsed={false} open={true}><summary style={{}}><h3 className={"openapi-markdown__details-summary-header-params"}>Path Parameters</h3></summary><div><ul><ParamsItem className={"paramsItem"} param={{"name":"customer_id","in":"path","required":true,"schema":{"type":"string","example":"0258cbc6-6020-430a-848e-aafacbadf4ae"}}}></ParamsItem></ul></div></details><MimeTabs className={"openapi-tabs__mime"}><TabItem label={"application/json"} value={"application/json-schema"}><details style={{}} className={"openapi-markdown__details mime"} data-collapsed={false} open={true}><summary style={{}} className={"openapi-markdown__details-summary-mime"}><h3 className={"openapi-markdown__details-summary-header-body"}>Body</h3><strong className={"openapi-schema__required"}>required</strong></summary><div style={{"textAlign":"left","marginLeft":"1rem"}}></div><ul style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"provider_name"} required={true} schemaName={"string"} qualifierMessage={"**Possible values:** [`apollo`]"} schema={{"type":"string","enum":["apollo"]}}></SchemaItem><SchemaItem collapsible={false} name={"category"} required={true} schemaName={"string"} qualifierMessage={"**Possible values:** [`engagement`]"} schema={{"type":"string","enum":["engagement"]}}></SchemaItem><SchemaItem collapsible={false} name={"api_key"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","description":"API key for the connected customer.","example":123456}}></SchemaItem><SchemaItem name={"property name*"} required={false} schemaName={"any"} qualifierMessage={undefined} schema={{"additionalProperties":true,"type":"object","properties":{"provider_name":{"type":"string","enum":["apollo"]},"category":{"type":"string","enum":["engagement"]},"api_key":{"type":"string","description":"API key for the connected customer.","example":123456}},"required":["provider_name","category","api_key"]}} collapsible={false} discriminator={false}></SchemaItem></ul></details></TabItem></MimeTabs><div><div><ApiTabs><TabItem label={"200"} value={"200"}><div>

Connection created

</div><div><MimeTabs className={"openapi-tabs__mime"} schemaType={"response"}><TabItem label={"application/json"} value={"application/json"}><SchemaTabs className={"openapi-tabs__schema"}><TabItem label={"Schema"} value={"Schema"}><details style={{}} className={"openapi-markdown__details response"} data-collapsed={false} open={true}><summary style={{}} className={"openapi-markdown__details-summary-response"}><strong>Schema</strong></summary><div style={{"textAlign":"left","marginLeft":"1rem"}}></div><ul style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"id"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","example":"e888cedf-e9d0-42c5-9485-2d72984faef2"}}></SchemaItem><SchemaItem collapsible={false} name={"status"} required={true} schemaName={"string"} qualifierMessage={"**Possible values:** [`available`, `added`, `authorized`, `callable`]"} schema={{"type":"string","enum":["available","added","authorized","callable"],"example":"available"}}></SchemaItem><SchemaItem collapsible={false} name={"application_id"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","example":"d8ceb3ff-8b7f-4fa7-b8de-849292f6ca69"}}></SchemaItem><SchemaItem collapsible={false} name={"customer_id"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","example":"my-customer-1"}}></SchemaItem><SchemaItem collapsible={false} name={"provider_id"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","example":"677fcfca-cf89-4387-a189-71c885be67bc"}}></SchemaItem><SchemaItem collapsible={false} name={"provider_name"} required={true} schemaName={"provider_name"} qualifierMessage={"**Possible values:** [`hubspot`, `salesforce`, `pipedrive`, `zendesk_sell`, `ms_dynamics_365_sales`, `zoho_crm`, `capsule`, `outreach`, `gong`, `apollo`]"} schema={{"type":"string","enum":["hubspot","salesforce","pipedrive","zendesk_sell","ms_dynamics_365_sales","zoho_crm","capsule","outreach","gong","apollo"],"title":"provider_name"}}></SchemaItem><SchemaItem collapsible={false} name={"category"} required={true} schemaName={"category"} qualifierMessage={"**Possible values:** [`crm`, `engagement`]"} schema={{"type":"string","enum":["crm","engagement"],"title":"category"}}></SchemaItem><SchemaItem collapsible={false} name={"instance_url"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","description":"Instance URL for the connected customer.","example":"https://app.hubspot.com/contacts/123456"}}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}} className={"openapi-markdown__details"}><summary style={{}}><span className={"openapi-schema__container"}><strong className={"openapi-schema__property"}>schema_mappings_config</strong><span className={"openapi-schema__name"}> object</span></span></summary><div style={{"marginLeft":"1rem"}}><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}} className={"openapi-markdown__details"}><summary style={{}}><span className={"openapi-schema__container"}><strong className={"openapi-schema__property"}>common_objects</strong><span className={"openapi-schema__name"}> object[]</span></span></summary><div style={{"marginLeft":"1rem"}}><li><div style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem","paddingBottom":".5rem"}}>Array [</div></li><SchemaItem collapsible={false} name={"object"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string"}}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}} className={"openapi-markdown__details"}><summary style={{}}><span className={"openapi-schema__container"}><strong className={"openapi-schema__property"}>field_mappings</strong><span className={"openapi-schema__name"}> object[]</span><span className={"openapi-schema__divider"}></span><span className={"openapi-schema__required"}>required</span></span></summary><div style={{"marginLeft":"1rem"}}><li><div style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem","paddingBottom":".5rem"}}>Array [</div></li><SchemaItem collapsible={false} name={"schema_field"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string"}}></SchemaItem><SchemaItem collapsible={false} name={"mapped_field"} required={false} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string"}}></SchemaItem><li><div style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem"}}>]</div></li></div></details></SchemaItem><li><div style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem"}}>]</div></li></div></details></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}} className={"openapi-markdown__details"}><summary style={{}}><span className={"openapi-schema__container"}><strong className={"openapi-schema__property"}>standard_objects</strong><span className={"openapi-schema__name"}> object[]</span></span></summary><div style={{"marginLeft":"1rem"}}><li><div style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem","paddingBottom":".5rem"}}>Array [</div></li><SchemaItem collapsible={false} name={"object"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string"}}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}} className={"openapi-markdown__details"}><summary style={{}}><span className={"openapi-schema__container"}><strong className={"openapi-schema__property"}>field_mappings</strong><span className={"openapi-schema__name"}> object[]</span><span className={"openapi-schema__divider"}></span><span className={"openapi-schema__required"}>required</span></span></summary><div style={{"marginLeft":"1rem"}}><li><div style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem","paddingBottom":".5rem"}}>Array [</div></li><SchemaItem collapsible={false} name={"schema_field"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string"}}></SchemaItem><SchemaItem collapsible={false} name={"mapped_field"} required={false} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string"}}></SchemaItem><li><div style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem"}}>]</div></li></div></details></SchemaItem><li><div style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem"}}>]</div></li></div></details></SchemaItem></div></details></SchemaItem></ul></details></TabItem><TabItem label={"Example (from schema)"} value={"Example (from schema)"}><ResponseSamples responseExample={"{\n  \"id\": \"e888cedf-e9d0-42c5-9485-2d72984faef2\",\n  \"status\": \"available\",\n  \"application_id\": \"d8ceb3ff-8b7f-4fa7-b8de-849292f6ca69\",\n  \"customer_id\": \"my-customer-1\",\n  \"provider_id\": \"677fcfca-cf89-4387-a189-71c885be67bc\",\n  \"provider_name\": \"hubspot\",\n  \"category\": \"crm\",\n  \"instance_url\": \"https://app.hubspot.com/contacts/123456\",\n  \"schema_mappings_config\": {\n    \"common_objects\": [\n      {\n        \"object\": \"string\",\n        \"field_mappings\": [\n          {\n            \"schema_field\": \"string\",\n            \"mapped_field\": \"string\"\n          }\n        ]\n      }\n    ],\n    \"standard_objects\": [\n      {\n        \"object\": \"string\",\n        \"field_mappings\": [\n          {\n            \"schema_field\": \"string\",\n            \"mapped_field\": \"string\"\n          }\n        ]\n      }\n    ]\n  }\n}"} language={"json"}></ResponseSamples></TabItem></SchemaTabs></TabItem></MimeTabs></div></TabItem></ApiTabs></div></div>
      
